Added crypto properties for data.csv

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 app:
-  file:
-    source: data.csv
+  filename: data.csv
+spring:
+  banner:
+    location: logo-app.txt
+  profiles:
+    active: prod
